Changes in structure and added CSS

--- a/index.html
+++ b/index.html
@@ -3,9 +3,21 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="main.css">
   <title>404</title>
 </head>
 <body>
+  <header>
+    <img src="./img/logo-bo.png" alt="A logo of BlueOcean">
+  </header>
+  <div>
+    <h1>Page not found</h1>
+    <p>You have misspelled the URL, or this page does not exist any more. Please return to main page or use one of the links below to start over.</p>
+    <a href="#">Project</a>
+    <a href="#">Enviroment</a>
+    <a href="#">Photos</a>
+    <a href="#">Contact</a>
+  </div>
   
 </body>
 </html>
