Almost final HTML + CSS

--- a/index.html
+++ b/index.html
@@ -8,11 +8,11 @@
 </head>
 <body>
   <header>
-    <img src="./img/logo-bo.png" alt="A logo of BlueOcean">
+    <img src="./img/logo-bo-cr.png" alt="A logo of BlueOcean">
   </header>
   <div>
-    <h1>Page not found</h1>
-    <p>You have misspelled the URL, or this page does not exist any more. Please return to main page or use one of the links below to start over.</p>
+    <h1>Page not Found</h1>
+    <p>You have misspelled the URL, or this page does not exist any more. Please return to <a class="a-p" href="#">main page</a> or use one of the links below to start over.</p>
     <a href="#">Project</a>
     <a href="#">Enviroment</a>
     <a href="#">Photos</a>
